fix (First-Step): Correct gap value in mobile

--- a/css/first-step/mobile.css
+++ b/css/first-step/mobile.css
@@ -19,3 +19,8 @@
 
   margin-bottom: 2rem;
 }
+
+.buttons-container {
+  justify-content: center;
+  gap: 1.8rem;
+}
